@@ -211,9 +211,9 @@ static slurm_errtab_t slurm_errtab[] = {
 	{ ESLURMD_CANNOT_SPAWN_IO_THREAD,
 	  "Slurmd could not spawn I/O thread"			},
 	{ ESLURMD_FORK_FAILED,
-	  "Slurmd could not fork batch job"			},
+	  "Slurmd could not fork job"				},
 	{ ESLURMD_EXECVE_FAILED,
-	  "Slurmd could not execve batch job"			},
+	  "Slurmd could not execve job"				},
 	{ ESLURMD_IO_ERROR,
 	  "Slurmd could not connect IO"			        },
 	{ ESLURMD_PROLOG_FAILED,
