@@ -506,7 +506,7 @@ _job_mgr(slurmd_job_t *job)
 		if (errno == ENOSPC) 
 			rc = ESLURMD_TOOMANYSTEPS;
 		else if (errno == EEXIST)
-			rc = ESLURMD_STEP_EXISTS;
+		rc = ESLURMD_STEP_EXISTS;
 		goto fail0;
 	}
 
@@ -532,11 +532,13 @@ _job_mgr(slurmd_job_t *job)
 	if (!job->batch && 
 	    (interconnect_init(job->switch_job, job->uid) < 0)) {
 		/* error("interconnect_init: %m"); already logged */
+		rc = ESLURM_INTERCONNECT_FAILURE;
 		goto fail2;
 	}
 
 	if (_fork_all_tasks(job) < 0) {
 		debug("_fork_all_tasks failed");
+		rc = ESLURMD_EXECVE_FAILED;
 		goto fail2;
 	}
 
@@ -607,6 +609,7 @@ _job_mgr(slurmd_job_t *job)
 static int
 _fork_all_tasks(slurmd_job_t *job)
 {
+	int rc = SLURM_SUCCESS;
 	int i;
 	int *writefds; /* array of write file descriptors */
 	int *readfds; /* array of read file descriptors */
@@ -726,12 +729,14 @@ _fork_all_tasks(slurmd_job_t *job)
 		 * Prepare process for attach by parallel debugger 
 		 * (if specified and able)
 		 */
-		pdebug_trace_process(job, job->task[i]->pid);
+		if (pdebug_trace_process(job, job->task[i]->pid)
+		    == SLURM_ERROR)
+			rc = SLURM_ERROR;
 	}
 	xfree(writefds);
 	xfree(readfds);
 
-	return SLURM_SUCCESS;
+	return rc;
 }
 
 
