@@ -27,8 +27,9 @@
 
 /*
  * Prepare task for parallel debugger attach
+ * Returns SLURM_SUCCESS or SLURM_ERROR.
  */
-void 
+int
 pdebug_trace_process(slurmd_job_t *job, pid_t pid)
 {
 	/*  If task to be debugged, wait for it to stop via
@@ -41,15 +42,34 @@ pdebug_trace_process(slurmd_job_t *job, pid_t pid)
 	if (job->task_flags & TASK_PARALLEL_DEBUG) {
 		int status;
 		waitpid(pid, &status, WUNTRACED);
-		if ((pid > (pid_t) 0) && (kill(pid, SIGSTOP) < 0))
+		if (!WIFSTOPPED(status)) {
+			debug("pdebug_trace_process WIFSTOPPED false"
+			      " for pid %lu", pid);
+			if (WIFEXITED(status)) {
+				debug("Process %lu exited \"normally\""
+				      " with return code %d",
+				      pid, WEXITSTATUS(status));
+			} else if (WIFSIGNALED(status)) {
+				debug("Process %lu kill by signal %d",
+				      pid, WTERMSIG(status));
+			}
+			return SLURM_ERROR;
+		}
+		if ((pid > (pid_t) 0) && (kill(pid, SIGSTOP) < 0)) {
 			error("kill(%lu): %m", (unsigned long) pid);
+			return SLURM_ERROR;
+		}
+
 #ifdef HAVE_AIX
-		if (_PTRACE(PT_DETACH, pid, NULL, 0))
+		if (_PTRACE(PT_DETACH, pid, NULL, 0)) {
 #else
-		if (_PTRACE(PTRACE_DETACH, pid, NULL, 0))
+		if (_PTRACE(PTRACE_DETACH, pid, NULL, 0)) {
 #endif
 			error("ptrace(%lu): %m", (unsigned long) pid);
+			return SLURM_ERROR;
+		}
 	}
+	return SLURM_SUCCESS;
 }
 
 /*
