@@ -7,6 +7,7 @@ documents those changes that are of interest to users and admins.
  -- Fix for smap to save correctly already correct in 0.7
  -- Fix for srun IO thread failing to exit on SRUN_JOB_FAILED state.
  -- Accounting bug causing segv fixed (Andy Riebs, 14oct.jobacct.patch)
+ -- Fix for failed launch of a debugged job (e.g. bad executable name).
 
 * Changes in SLURM 0.6.8
 ========================
